--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 <body>
   <header>
     <div class="header-logo">
-      <h1><a href="index.html">Ninja Ken</a></h1>
+      
+      <img class="logo" src="assets/images/logo.png">
+      <h1><a href="#" class="Logo-name">Nusantara Foodcourt</a></h1>
     </div>
-    <div class="header-nav">
+    <div class="header-right">
       <ul>
-        <li><a href="#">Tentang Saya</a></li>
-        <li><a href="#">Proyek Contoh</a></li>
-        <li><a href="#">Hubungi Saya</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Produk Kami</a></li>
+        <li><a href="#">Cara Pemesanan</a></li>
+        <li><a href="#">Hubungi Kami</a></li>
       </ul>
     </div>
     <div class="bi bi-list"></div>
@@ -82,13 +85,13 @@
 
   <footer>
     <div class="footer-logo">
-      <h1><a href="index.html">Ninja Ken</a></h1>
+      <h1><a href="index.html">Nusantara Foodcourt</a></h1>
     </div>
     <div class="footer-nav">
       <ul>
-        <li><a href="#">Tentang Saya</a></li>
-        <li><a href="#">Proyek Contoh</a></li>
-        <li><a href="#">Hubungi Saya</a></li>
+        <li><a href="#">Tentang Kami</a></li>
+        <li><a href="#">Lokasi franchise </a></li>
+        <li><a href="#">Menjadi Reseller</a></li>
       </ul>
   </footer>
 </body>
